--- a/Ruby-Proyect/app/views/dashboard/grupos/new.html.erb
+++ b/Ruby-Proyect/app/views/dashboard/grupos/new.html.erb
@@ -1,11 +1,11 @@
 <h1>Nuevo grupo</h1>
 
-<%= form_with model: @grupo, local: true do |form|%>
-<div>
-    <%= form.label :nombre%><br>
-    <%= form.text_field :nombre%>
-</div>
-<div>
-    <%= form.submit "crear"%>
-</div>
+<%= form_with model: [:dashboard, @grupo], local: true, html: { class: "dashboard-form" } do |f| %>
+  <div>
+    <%= f.label :nombre %>
+    <%= f.text_field :nombre %>
+  </div>
+  <div>
+    <%= f.submit "Crear grupo" %>
+  </div>
 <% end %>
