--- a/Ruby-Proyect/app/views/dashboard/products/new.html.erb
+++ b/Ruby-Proyect/app/views/dashboard/products/new.html.erb
@@ -19,7 +19,7 @@
   </div>
   <div>
     <%= f.label :imagen %>
-    <%= f.text_field :imagen %>
+    <%= f.file_field :imagen %>
   </div>
   <div class="checkbox-container">
     <%= f.label :disponible %>
