--- a/Ruby-Proyect/app/views/dashboard/products/edit.html.erb
+++ b/Ruby-Proyect/app/views/dashboard/products/edit.html.erb
@@ -18,7 +18,7 @@
 
   <div>
     <%= form.label :imagen %>
-    <%= form.text_field :imagen, value: @product.imagen %>
+    <%= form.file_field :imagen, value: @product.imagen %>
   </div>
 
   <div>
