--- a/Ruby-Proyect/app/views/pages/_home.html.erb
+++ b/Ruby-Proyect/app/views/pages/_home.html.erb
@@ -12,7 +12,7 @@
 
             <% productos_disponibles.each do |producto| %>
               <div class="carta">
-                <%= image_tag "Hamburgesas.png" %>
+                <%= image_tag(producto.imagen.attached? ? producto.imagen : "default_img_product.png") %>
                 <h4><%= producto.nombre %></h4>
               </div>
             <% end %>
