--- a/Ruby-Proyect/app/views/pages/index.html.erb
+++ b/Ruby-Proyect/app/views/pages/index.html.erb
@@ -27,11 +27,11 @@
     </div>
 </nav>
 
-<section class="vistas">
+<main class="vistas">
 
     <%= render partial: @seccion if @seccion.present? %>
 
-</section>
+</main>
 
 <footer class="footer">
     <div class="social">
