--- a/Ruby-Proyect/app/assets/stylesheets/application.css
+++ b/Ruby-Proyect/app/assets/stylesheets/application.css
@@ -8,8 +8,9 @@
     --negro: #333333;
 }
 
-body{
+html,body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    height: 100%;
     margin: 0;
     padding: 0;
 }
@@ -17,7 +18,7 @@ body{
 a:hover{text-decoration: underline;}
 input:focus{outline: none;}
 
-.login{
+.login, .registro, .contraseñaRecuperacion, .cambioContraseña{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -26,20 +27,11 @@ input:focus{outline: none;}
     background: linear-gradient(70deg, var(--base-claro),var(--base),var(--base-oscuro));
 }
 
-.registro{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(70deg, var(--base-claro),var(--base),var(--base-oscuro));
-}
-
 .session-header{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 20px 0;
+    margin: 30px 0;
 }
 
 .session-header img{
@@ -98,6 +90,7 @@ input:focus{outline: none;}
 .session-form a{
     color: #007bff;
     text-decoration: none;
+    margin: 6px 0;
 }
 
 .session-form ol {
@@ -242,15 +235,34 @@ input:focus{outline: none;}
 
 
 .footer{
-    display: flex;
+    display: flex; 
     flex-direction: column;
     justify-content: center;
+    padding: 10px;
     align-items: center;
     margin-top: 20px;
     gap: 5px;
 }
 
-.vistas{min-height: 50dvh;}
+.vistas{min-height: 54dvh;}
+
+.sin-productos {
+  text-align: center;
+  margin: 20px 0;
+}
+
+.sin-productos img{
+  width: 300px;
+  margin: 20px 0;
+  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.sin-productos h2{
+    font-variant: small-caps;
+}
+
 
 .grupo {
     margin-top: 40px;
