--- a/Ruby-Proyect/app/views/devise/passwords/edit.html.erb
+++ b/Ruby-Proyect/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,50 @@
-<h2>Change your password</h2>
+<div class="cambioContraseña">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+  <div class="session-header">
+    <h1>La Terraza del Pri</h1>
+    <%= image_tag "LogoTerrazaDelPri.svg" %>
+  </div>  
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+  <div class="session-form">
+    <h2>Cambia la contraseña</h2>
+    
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= f.hidden_field :reset_password_token %>
+
+    <div class="field">
+      <%= f.label :password, "Nueva Contraseña" %><br />
+      <% if @minimum_password_length %>
+        <em>(minimo <%= @minimum_password_length %> caracteres)</em><br />
+      <% end %>
+      <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :password_confirmation, "Confirmar Contraseña" %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Cambiar Contraseña" %>
+    </div>
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+
+    <%= render "devise/shared/links" %>
+  </div>
+  <div class="session-footer">
+    <div class="social">
+      <a href="https://www.instagram.com/laterrazadelpri?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+        <%= image_tag "icons/instagram-brands.svg" %>
+      </a>
+      <a href="https://wa.me/573113678033" target="_blank">
+        <%= image_tag "icons/whatsapp-brands.svg" %>
+      </a>
+      <a href="https://www.tiktok.com/@laterrazadelpri?is_from_webapp=1&sender_device=pc" target="_blank">
+        <%= image_tag "icons/tiktok-brands.svg" %>
+      </a>
+    </div>
+    <p>© 2023 La Terraza del Pri. Todos los derechos reservados.</p>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
