--- a/Ruby-Proyect/app/assets/stylesheets/application.css
+++ b/Ruby-Proyect/app/assets/stylesheets/application.css
@@ -254,9 +254,9 @@ input:focus{outline: none;}
 .sin-productos img{
   width: 300px;
   margin: 20px 0;
-  border-radius: 8px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  border: 2px solid;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .sin-productos h2{
