--- a/docs/views/home.html
+++ b/docs/views/home.html
@@ -5,5 +5,5 @@
 </style>
 <div id="home">
     <h1 class="text-center">Bienvenidos a la Documentación</h1>
-    <p class="lead text-center">Este sistema está diseñado para facilitar el proceso de pedidos en línea, aquí encontraras todos los documentos relacionados con el proyecto.</p>
+    <p class="lead text-center">Este sistema está diseñado para facilitar el proceso de pedidos en línea y entregas a domicilios, aquí encontraras todos los documentos relacionados con el proyecto.</p>
 </div>
