update web bitevia

--- a/Ruby-Proyect/app/views/dashboard/dashboard/index.html.erb
+++ b/Ruby-Proyect/app/views/dashboard/dashboard/index.html.erb
@@ -31,7 +31,7 @@
     </ul>
     </div>
 
-    <div class="card">
+    <div class="card" id="products-list">
     <h3>Productos</h3>
     <ul>
         <% Product.all.each do |product| %>
