--- a/Ruby-Proyect/app/views/devise/passwords/new.html.erb
+++ b/Ruby-Proyect/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,7 @@
 <section class="contraseñaRecuperacion">
   <div class="session-header">
-    <h1>La Terraza del Pri</h1>
-    <%= image_tag "LogoTerrazaDelPri.svg" %>
+    <h1>Bitevia Software</h1>
+    <%= image_tag "LogoLogo.svg" %>
   </div>  
 
   <div class="session-form">
