--- a/Ruby-Proyect/app/views/layouts/dashboard.html.erb
+++ b/Ruby-Proyect/app/views/layouts/dashboard.html.erb
@@ -8,8 +8,8 @@
   <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
 
 
-  <link rel="icon" href="<%= asset_path('LogoTerrazaDelPri.svg') %>" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="<%= asset_path('LogoTerrazaDelPri.svg') %>" type="image/svg+xml">
+  <link rel="icon" href="<%= asset_path('LogoLogo.svg') %>" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="<%= asset_path('LogoLogo.svg') %>" type="image/svg+xml">
 
 
 </head>
