--- a/Ruby-Proyect/app/views/devise/registrations/new.html.erb
+++ b/Ruby-Proyect/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <section class="registro">
   <header class="session-header">
-    <h1>La Terraza del Pri</h1>
-    <%= image_tag "LogoTerrazaDelPri.svg" %>
+    <h1>Bitevia Software</h1>
+    <%= image_tag "LogoLogo.svg" %>
   </header>
   <div class="session-form">
     <h2>Regístrate</h2>
