--- a/Ruby-Proyect/app/views/layouts/application.html.erb
+++ b/Ruby-Proyect/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for(:title) || "La Terraza del Pri" %></title>
+    <title><%= content_for(:title) || "Bitevia" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
@@ -13,8 +13,8 @@
     <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
     <%#= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
 
-    <link rel="icon" href="<%= asset_path('LogoTerrazaDelPri.svg') %>" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="<%= asset_path('LogoTerrazaDelPri.svg') %>" type="image/svg+xml">
+    <link rel="icon" href="<%= asset_path('LogoLogo.svg') %>" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="<%= asset_path('LogoLogo.svg') %>" type="image/svg+xml">
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag "bootstrap.min", "data-turbo-track": "reload" %>
