--- a/Ruby-Proyect/app/views/pages/index.html.erb
+++ b/Ruby-Proyect/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <header class="header">
-    <h1>La Terraza del Pri</h1>
-    <%= image_tag "LogoTerrazaDelPri.svg" %>
+    <h1>Bitevia Software</h1>
+    <%= image_tag "LogoLogo.svg" %>
 </header>
 
 <nav class="navbar">
