--- a/Ruby-Proyect/app/views/pages/_carrito.html.erb
+++ b/Ruby-Proyect/app/views/pages/_carrito.html.erb
@@ -15,7 +15,7 @@
             <tr>
                 <td>
                     <div class="item-details">
-                        <%= image_tag "default_img_product.png", class: "product-thumbnail" %>
+                        <%= image_tag "LogoLogoText2.svg", class: "product-thumbnail" %>
                         <span>Salchipapa sencilla</span>
                     </div>
                 </td>
@@ -25,7 +25,7 @@
             <tr>
                 <td>
                     <div class="item-details">
-                        <%= image_tag "default_img_product.png", class: "product-thumbnail" %>
+                        <%= image_tag "LogoLogoText2.svg", class: "product-thumbnail" %>
                         <span>Perro sencillo</span>
                     </div>
                 </td>
