--- a/Ruby-Proyect/app/assets/stylesheets/application.css
+++ b/Ruby-Proyect/app/assets/stylesheets/application.css
@@ -18,6 +18,8 @@ html,body{
 a:hover{text-decoration: underline;}
 input:focus{outline: none;}
 
+/* Inisio de Sesión */
+
 .login, .registro, .contraseñaRecuperacion, .cambioContraseña{
     display: flex;
     flex-direction: column;
@@ -47,7 +49,6 @@ input:focus{outline: none;}
     display: flex;
     flex-direction: column;
     padding: 18px;
-
     border-radius: 8px;
     background-color: var(--base-claro);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -129,6 +130,8 @@ input:focus{outline: none;}
     height: 30px;
     margin: 0 10px;
 }
+
+/* Home */
 
 .header{
     display: flex;
@@ -328,6 +331,8 @@ input:focus{outline: none;}
     border-radius: 5px;
 }
 
+/* Dashboard */
+
 .dashboard-container {
     display: flex;
     min-height: 100dvh;
@@ -373,7 +378,7 @@ input:focus{outline: none;}
 }
 
 .sidebar summary::after {
-  content: "▶"; /* o "▼" si está abierto */
+  content: "▶";
   position: absolute;
   right: 0;
   top: 0;
@@ -683,9 +688,10 @@ input:focus{outline: none;}
 }
 
 #products-list ul{
-    max-height: 150px; /* Ajusta la altura según necesites */
+    max-height: 150px;
     overflow-y: auto;
-    padding-right: 10px; /* Opcional: espacio para la barra de scroll */
+    padding-right: 10px;
+}
 
 /* Carrito */
 
@@ -824,3 +830,41 @@ input:focus{outline: none;}
 .order-button:hover {
     background-color: #45a049;
 }
+
+/* Editar Usuario */
+
+.edit{
+    width: 100%;
+    max-width: 550px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin: 0 auto;
+    margin-top: 50px;
+    align-items: center;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
+}
+
+.edit i{
+    font-size: 15px;
+    display: block;
+    margin: 0;
+}
+
+.edit label{margin: 7px 0 2px 0;}
+
+.edit button{
+    background-color: var(--base);
+    color: white;
+    border: none;
+    font-weight: bold;
+    margin: 10px auto 10px auto;
+    padding: 7px 10px ;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.edit button:hover{background-color: var(--base-oscuro);}
+
+.edit .session-form{width: 100%;}
