agregar vista menu

--- a/Ruby-Proyect/app/views/pages/_home.html.erb
+++ b/Ruby-Proyect/app/views/pages/_home.html.erb
@@ -1,32 +1,1 @@
-<% productos_existentes = @grupos.any? { |grupo| grupo.products.select(&:disponible).any? } %>
-
-<% if productos_existentes %>
-  <% @grupos.each do |grupo| %>
-    <% productos_disponibles = grupo.products.select(&:disponible) %>
-    <% if productos_disponibles.any? %>
-      <div class="grupo">
-        <h2><%= grupo.nombre %></h2>
-
-        <div class="slider-wrapper">
-          <button class="botonL" onclick="moverSlider('slider-<%= grupo.id %>', -1)">←</button>
-
-          <div class="slider-container" id="slider-<%= grupo.id %>">
-            <% productos_disponibles.each do |producto| %>
-              <div class="carta">
-                <%= image_tag(producto.imagen.attached? ? producto.imagen : "LogoLogoText2.svg") %>
-                <h4><%= producto.nombre %></h4>
-              </div>
-            <% end %>
-          </div>
-
-          <button class="botonR" onclick="moverSlider('slider-<%= grupo.id %>', 1)">→</button>
-        </div>
-      </div>
-    <% end %>
-  <% end %>
-<% else %>
-  <div class="sin-productos">
-    <%= image_tag "sin_productos.png", alt: "Producto No Disponible" %>
-    <h2>No hay productos disponibles por ahora.</h2>
-  </div>
-<% end %>
+<h1>Hola</h1>
