--- a/Ruby-Proyect/app/views/pages/index.html.erb
+++ b/Ruby-Proyect/app/views/pages/index.html.erb
@@ -14,6 +14,7 @@
     </div>
     <div class="links">
         <%= link_to "Inicio", root_path %>
+        <%= link_to "Menú", menu_path %>
         <%= link_to "Carrito", carrito_path %>
         <% if current_user.admin? %>
             <%= link_to 'Panel de administración', dashboard_root_path %></li>
