--- a/Ruby-Proyect/app/views/devise/registrations/new.html.erb
+++ b/Ruby-Proyect/app/views/devise/registrations/new.html.erb
@@ -43,7 +43,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Registrar" %>
+        <%= f.submit "Registrar"%>
       </div>
     <% end %>
 
@@ -52,16 +52,16 @@
   </div>
   <footer class="session-footer">
     <div class="social">
-      <a href="https://www.instagram.com/laterrazadelpri?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+      <a href="#">
         <%= image_tag "icons/instagram-brands.svg" %>
       </a>
-      <a href="https://wa.me/573113678033" target="_blank">
+      <a href="#">
         <%= image_tag "icons/whatsapp-brands.svg" %>
       </a>
-      <a href="https://www.tiktok.com/@laterrazadelpri?is_from_webapp=1&sender_device=pc" target="_blank">
+      <a href="#">
         <%= image_tag "icons/tiktok-brands.svg" %>
       </a>
     </div>
-    <p>© 2023 La Terraza del Pri. Todos los derechos reservados.</p>
+    <p>© 2025 Bitevia Software. Todos los derechos reservados.</p>
   </footer>
 </section>
